# course_5

./: README.md  pyproject.toml
src/: DB_module.py  data_preparation.py  main_code.py  queries.sql  vacancies_collector.py
