[tool.poetry]
name = "course-5"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "course_5"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.6"


[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
